fixed bug in docs menu with hard height not showing all sub items

--- a/src/docs/components/TocMenu/index.css
+++ b/src/docs/components/TocMenu/index.css
@@ -11,3 +11,7 @@
 	opacity:.3;
 	pointer-events:none;
 }
+
+.TocMenu .toc li.expand ol {
+    max-height: 1000px !important;
+}
